# plotkit

./: LICENSE  README.md  pyproject.toml
demo/: demo_color_palette.py  demo_ld_heatmap.py  demo_multi_panel.py  demo_palette.py  demo_palette_bar.py  demo_plot.py  demo_plot_palette.py  demo_theme.py  multi_panel_demo.py  palettes.json  test_style.ipynb
plotkit/: __init__.py  auto.py  palettes.py  plots.py  preview.py  themes.py  utils.py
plotkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: demo_color_palette.py  demo_plot.py  palettes.json
