[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plotkit"
version = "0.1.0"
description = "Lightweight plotting toolkit with automatic theme selection"
authors = [
  { name="Your Name", email="your@email.com" }
]
dependencies = [
  "matplotlib",
  "seaborn",
  "numpy"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
